--- a/style.css
+++ b/style.css
@@ -73,3 +73,12 @@ img{
     height: 300px;
     margin-top: 100px;
 }
+
+.grammarly{
+    float: left;
+    text-align: left;
+    margin-left: 5%;
+    width: 250px;
+    height: 300px;
+    margin-top: 100px;
+}
