--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ img{
 .bww{
     float: left;
     text-align: left;
-    margin-left: 5%;
+    margin-left: 2%;
     width: 250px;
+    font-size: 14px;
     height: 300px;
     margin-top: 100px;
 }
@@ -77,7 +78,25 @@ img{
 .grammarly{
     float: left;
     text-align: left;
-    margin-left: 5%;
+    margin-left: 2%;
+    width: 250px;
+    height: 300px;
+    margin-top: 100px;
+}
+
+.NordVPN{
+    float: left;
+    text-align: left;
+    margin-left: 2%;
+    width: 250px;
+    height: 300px;
+    margin-top: 100px;
+}
+
+.Hulu{
+    float: left;
+    text-align: left;
+    margin-left: 2%;
     width: 250px;
     height: 300px;
     margin-top: 100px;
