--- a/style.css
+++ b/style.css
@@ -101,3 +101,12 @@ img{
     height: 300px;
     margin-top: 100px;
 }
+
+.Disney_Plus{
+    float: left;
+    text-align: left;
+    margin-left: 2%;
+    width: 250px;
+    height: 300px;
+    margin-top: 100px;
+}
