--- a/style.css
+++ b/style.css
@@ -151,3 +151,13 @@ img{
 .Minecraft-Logo{
     border-radius: 0px;
 }
+
+.Insomnia{
+    float: left;
+    text-align: left;
+    margin-left: 2%;
+    border-radius: 0;
+    width: 250px;
+    height: 300px;
+    margin-top: 100px;
+}
