--- a/style.css
+++ b/style.css
@@ -161,3 +161,36 @@ img{
     height: 300px;
     margin-top: 100px;
 }
+
+.Get_Config{
+    font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: -12px;
+    display: inline-block;
+    display: inline-flex;
+    align-items: stretch;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
+    line-height: 1;
+    font-weight: bolder;
+    font-size: 19px;
+    text-transform: uppercase;
+    letter-spacing: .027em;
+    text-decoration: none;
+    background-color:#cc0000;
+    color:#fff;
+    border: 0;
+    width: 60%;
+    border-radius: 10px;
+    padding: .55556em .55556em .5em;
+}
+
+.AMC{
+    float: left;
+    text-align: left;
+    margin-left: 2%;
+    border-radius: 0;
+    width: 250px;
+    height: 300px;
+    margin-top: 100px;
+}
