--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ img{
     margin-top: 100px;
 }
 
-.Get_Config{
+.Buy_Config{
     font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: -12px;
     display: inline-block;
