--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 .configdesc{
     width: 290px;
     height: 390px;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
+    box-shadow: 0px 2px 4px rgba(107, 107, 107, 0.418);
     margin-left: 4.5%;
     margin-bottom: 2%;
     float: left;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.configdesc:hover{
+    transform: scale(1.04);
 }
 
 body{
-    background-color: rgb(240, 240, 240)
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
 }
 
 .free{
@@ -21,6 +27,7 @@ body{
     font-family: sans-serif;
     margin-top: 4%;
     position: relative;
+    color: rgb(255, 255, 255);
 }
 
 .paid{
@@ -44,24 +51,32 @@ body{
 img{
     width: 100%;
     object-fit: cover;
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
     margin-bottom: 0%;
     height: 36%;
 }
 
 a{
-    font-family: 'Ubuntu', sans-serif;
-    background-color:rgb(69, 202, 91);
-    color:#fff;
-    border: 0;
-    width: 50%;
-    border-radius: 5px;
-    padding: 3% 3% 3%;
-    letter-spacing: 30%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    background-color: transparent;
+    border: solid 1px #c7ceda;
+    border-color: #c7ceda;
+    color: rgb(32, 32, 32);
+    outline-width: 3px;
+    width: 75%;
+    border-radius: 60px;
+    padding: 5% 7% 5%;
+    letter-spacing: 40%;
     position: relative;
-    top: 5%;
-    left: 32%;
+    top: 3%;
+    left: 27%;
     text-decoration: none;
+    transition: 0.3s;
+}
+
+a:hover{
+    background-image: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
 }
 
 .apaid{
@@ -83,12 +98,6 @@ p{
     left: 10%;
     position: relative;
     font-family: sans-serif;
-}
-
-.lin3{
-    width: 100%;
-    height: 0.3%;
-    background-color: rgba(114, 114, 114, 0.178);
 }
 
 .lin2{
