--- a/style.css
+++ b/style.css
@@ -36,12 +36,13 @@ body{
     text-align: center;
     position: relative;
     clear: both;
+    color: white;
 }
 
 .line{
     width: 80px;
     height: 7px;
-    background-color: rgb(69, 202, 91);
+    background-image: linear-gradient(19deg, rgb(33, 253, 81) 0%, rgb(128, 255, 255) 100%);
     margin: auto;
     margin-top: -0.7%;
     border-radius: 10px;
@@ -76,11 +77,14 @@ a:hover{
     background-image: linear-gradient(19deg, #21D4FD 0%, rgb(215, 128, 255) 100%);
 }
 
+.apaid:hover{
+    background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 162, 86) 100%);
+}
+
 .apaid{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    background-color: #FAACA8;
-    background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+    background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
     color: rgb(32, 32, 32);
     outline-width: 3px;
     width: 75%;
@@ -115,9 +119,9 @@ p{
 .redline{
     width: 80px;
     height: 7px;
-    background-color: rgb(202, 69, 69);
     margin: auto;
     margin-top: -0.7%;
     border-radius: 10px;
-    margin-bottom: 4%
+    margin-bottom: 4%;
+    background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 139, 86) 100%);
 }
