--- a/style.css
+++ b/style.css
@@ -77,11 +77,7 @@ a:hover{
     background-image: linear-gradient(19deg, #21D4FD 0%, rgb(215, 128, 255) 100%);
 }
 
-.apaid:hover{
-    background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 162, 86) 100%);
-}
-
-.apaid{
+button{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
@@ -97,6 +93,11 @@ a:hover{
     text-decoration: none;
     transition: 0.3s;
 }
+
+button:hover{
+    background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 162, 86) 100%);
+}
+
 
 p{
     left: 10%;
