--- a/style.css
+++ b/style.css
@@ -77,13 +77,13 @@ a:hover{
     background-image: linear-gradient(19deg, #21D4FD 0%, rgb(215, 128, 255) 100%);
 }
 
-button{
+.apaid{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
     color: rgb(32, 32, 32);
     outline-width: 3px;
-    width: 75%;
+    width: 40%;
     border-radius: 60px;
     padding: 5% 7% 5%;
     letter-spacing: 40%;
@@ -94,10 +94,26 @@ button{
     transition: 0.3s;
 }
 
-button:hover{
+.apaid:hover{
     background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 162, 86) 100%);
 }
 
+button{
+    background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
+    color: rgb(32, 32, 32);
+    outline-width: 3px;
+    width: 40%;
+    border-radius: 60px;
+    padding: 5% 7% 5%;
+    letter-spacing: 40%;
+    position: relative;
+    left: 27%;
+    margin-top:-10%;
+    text-decoration: none;
+    transition: 0.3s;
+    border:none;
+    font-size: 15px;
+}
 
 p{
     left: 10%;
