--- a/style.css
+++ b/style.css
@@ -142,3 +142,7 @@ p{
     margin-bottom: 4%;
     background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 139, 86) 100%);
 }
+
+button:onhover{
+    cursor: pointer;
+}
