--- a/style.css
+++ b/style.css
@@ -78,18 +78,19 @@ a:hover{
 }
 
 .apaid{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
     background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
     color: rgb(32, 32, 32);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     outline-width: 3px;
-    width: 40%;
+    width: 75%;
     border-radius: 60px;
     padding: 5% 7% 5%;
     letter-spacing: 40%;
     position: relative;
+    top: 0.7em;
+    left: 5em;
     text-decoration: none;
-    transition: 0.3s;
 }
 
 .apaid:hover{
