--- a/style.css
+++ b/style.css
@@ -134,6 +134,31 @@
   font-family: var(--font, "Roboto"), Whitney;
 }
 
+#app-mount .membersWrap-2h-GB4 {
+  background: var(--bg4);
+}
+#app-mount .membersWrap-2h-GB4 .member-3-YXUe {
+  margin-left: 0;
+  position: relative;
+  min-width: 100%;
+}
+#app-mount .membersWrap-2h-GB4 .member-3-YXUe .layout-2DM8Md {
+  background: transparent;
+  padding-left: 16px;
+}
+#app-mount .membersWrap-2h-GB4 .member-3-YXUe:hover {
+  background: var(--bg5);
+}
+#app-mount .membersWrap-2h-GB4 .member-3-YXUe:hover [aria-label*=mobile]:before {
+  background: linear-gradient(90deg, transparent, var(--bg5) 50%) !important;
+}
+#app-mount .membersWrap-2h-GB4 .member-3-YXUe.selected-aXhQR6 {
+  background: var(--bg6);
+}
+#app-mount .membersWrap-2h-GB4 .member-3-YXUe.selected-aXhQR6 [aria-label*=mobile]:before {
+  background: linear-gradient(90deg, transparent, var(--bg6) 50%) !important;
+}
+
 #app-mount .tooltipBlack-PPG47z {
   background: var(--tooltips);
   color: var(--text-1);
